tests/integration/tests/check_commands/CHECK/three_strings/05-negative_match_first_string_no_best_match/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: {{.*filecheck.check:1:.*: error: CHECK: expected string not found in input$}}
; CHECK-NEXT: {{^}}; CHECK: foo{{$}}
; CHECK-NEXT: {{^}}         ^{{$}}
; CHECK-NEXT: {{^<stdin>:.*:.*: note: scanning from here$}}
; CHECK-NEXT: {{^bar$}}
; CHECK-NEXT: {{^\^$}}
; CHECK-EMPTY:
